Add Services class, PaymentForm, PaymentConfirmForm

--- a/MinhThuHotel/MinhThuHotel/MinhThuHotel.csproj
+++ b/MinhThuHotel/MinhThuHotel/MinhThuHotel.csproj
@@ -60,11 +60,24 @@
     <Compile Include="Data\Customer.cs" />
     <Compile Include="Data\Room.cs" />
     <Compile Include="Data\RoomType.cs" />
+    <Compile Include="Data\Services.cs" />
     <Compile Include="MenuForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MenuForm.Designer.cs">
       <DependentUpon>MenuForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PaymentConfirmForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PaymentConfirmForm.Designer.cs">
+      <DependentUpon>PaymentConfirmForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PaymentForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PaymentForm.Designer.cs">
+      <DependentUpon>PaymentForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -76,6 +89,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MenuForm.resx">
       <DependentUpon>MenuForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PaymentConfirmForm.resx">
+      <DependentUpon>PaymentConfirmForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PaymentForm.resx">
+      <DependentUpon>PaymentForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
