All Form Design Finish #1

--- a/MinhThuHotel/MinhThuHotel/MinhThuHotel.csproj
+++ b/MinhThuHotel/MinhThuHotel/MinhThuHotel.csproj
@@ -61,11 +61,23 @@
     <Compile Include="Data\Room.cs" />
     <Compile Include="Data\RoomType.cs" />
     <Compile Include="Data\Services.cs" />
+    <Compile Include="ListCustomerForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ListCustomerForm.Designer.cs">
+      <DependentUpon>ListCustomerForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MenuForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MenuForm.Designer.cs">
       <DependentUpon>MenuForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PaymentCheckForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PaymentCheckForm.Designer.cs">
+      <DependentUpon>PaymentCheckForm.cs</DependentUpon>
     </Compile>
     <Compile Include="PaymentConfirmForm.cs">
       <SubType>Form</SubType>
@@ -87,8 +99,14 @@
     <EmbeddedResource Include="BookingForm.resx">
       <DependentUpon>BookingForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ListCustomerForm.resx">
+      <DependentUpon>ListCustomerForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MenuForm.resx">
       <DependentUpon>MenuForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PaymentCheckForm.resx">
+      <DependentUpon>PaymentCheckForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PaymentConfirmForm.resx">
       <DependentUpon>PaymentConfirmForm.cs</DependentUpon>
@@ -104,6 +122,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -114,6 +133,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\check.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
