--- a/MinhThuHotel/MinhThuHotel/MinhThuHotel.csproj
+++ b/MinhThuHotel/MinhThuHotel/MinhThuHotel.csproj
@@ -68,6 +68,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\DBHelper.cs" />
     <EmbeddedResource Include="BookingConfirmForm.resx">
       <DependentUpon>BookingConfirmForm.cs</DependentUpon>
     </EmbeddedResource>
